<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".ConnectActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="start|top"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/fccww_logo"
            android:src="@drawable/fccww" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="start|center_horizontal|center_vertical"
            android:text="@string/fcc_waterway"
            android:textColor="#1B2358"
            android:textSize="25sp"
            android:textStyle="bold"
            app:fontFamily="sans-serif-condensed-medium" />
    </LinearLayout>

    <Button
        android:id="@+id/contactUsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start|center_vertical"
        android:layout_weight="2"
        android:background="#4169FF"
        android:drawableStart="@drawable/call32x32"
        android:drawableLeft="@drawable/call32x32"
        android:drawablePadding="6dp"
        android:shadowColor="@android:color/black"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="1.6"
        android:text="@string/contact_us"
        android:textColor="@android:color/white"
        android:textSize="35sp" />

    <Button
        android:id="@+id/locateUsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:background="#73CAE4"
        android:drawableStart="@drawable/marker32x32"
        android:drawableLeft="@drawable/marker32x32"
        android:drawablePadding="6dp"
        android:layout_gravity="start|center_vertical"
        android:shadowColor="@android:color/black"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="1.6"
        android:text="@string/locate_us"
        android:textColor="@android:color/white"
        android:textSize="35sp" />

    <Button
        android:id="@+id/facebookButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:background="#3B5998"
        android:drawableStart="@drawable/facebook32x32"
        android:drawableLeft="@drawable/facebook32x32"
        android:drawablePadding="6dp"
        android:layout_gravity="start|center_vertical"
        android:shadowColor="@android:color/black"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="1.6"
        android:text="@string/facebook"
        android:textColor="@android:color/white"
        android:textSize="35sp" />

    <Button
        android:id="@+id/instagramButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:background="#405DE6"
        android:drawableLeft="@drawable/instagram32x32"
        android:layout_gravity="start|center_vertical"
        android:shadowColor="@android:color/black"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="1.6"
        android:text="@string/Instgram"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="35sp"
        android:drawableStart="@drawable/instagram32x32" />
</LinearLayout>