<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:contentDescription="@string/fccww_logo"
            android:src="@drawable/fccww" />

        <TextView
            android:id="@+id/FCCWW_Banner"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/fcc_waterway"
            android:textColor="#1B2358"
            android:textSize="25sp"
            android:textStyle="bold"
            app:fontFamily="sans-serif-condensed-medium" />
    </LinearLayout>

        <!--Connect Button here-->
        <Button
            android:id="@+id/connectButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@drawable/cross_small"
            android:shadowColor="@android:color/black"
            android:shadowDx="1.5"
            android:shadowDy="1.3"
            android:shadowRadius="1.6"
            android:text="@string/connect"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="35sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <!-- Giving and Outreach Buttons Here-->
            <Button
                android:id="@+id/givingButton"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/giving"
                android:shadowColor="@android:color/black"
                android:shadowDx="1.5"
                android:shadowDy="1.3"
                android:shadowRadius="1.6"
                android:text="@string/giving"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="35sp" />

            <Button
                android:id="@+id/outreachButton"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/community"
                android:shadowColor="@android:color/black"
                android:shadowDx="1.5"
                android:shadowDy="1.3"
                android:shadowRadius="1.6"
                android:text="@string/outreach"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="30sp" />
        </LinearLayout>

        <!--Prayer Requests and Events Button here-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/prayerButton"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/prayer_requests"
                android:background="@drawable/praying"
                android:shadowColor="@android:color/black"
                android:shadowDx="1.5"
                android:shadowDy="1.3"
                android:shadowRadius="1.6"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="35sp"/>

            <Button
                android:id="@+id/eventsButton"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/events"
                android:background="@drawable/calendar"
                android:shadowColor="@android:color/black"
                android:shadowDx="1.5"
                android:shadowDy="1.3"
                android:shadowRadius="1.6"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="35sp"/>
        </LinearLayout>

        <!--Bible and Podcast Buttons here-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bibleButton"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/bible"
                android:background="@drawable/bible"
                android:shadowColor="@android:color/black"
                android:shadowDx="1.5"
                android:shadowDy="1.3"
                android:shadowRadius="1.6"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="35sp"/>

            <Button
                android:id="@+id/podcastButton"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/podcast"
                android:background="@drawable/podcast"
                android:shadowColor="@android:color/black"
                android:shadowDx="1.5"
                android:shadowDy="1.3"
                android:shadowRadius="1.6"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="35sp"/>
        </LinearLayout>
</LinearLayout>