<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="8dp">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="4dp">

        <ImageView
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/fccww_logo"
            android:src="@drawable/fccww" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:gravity="start|center_horizontal|center_vertical"
            android:text="@string/fcc_waterway"
            android:textColor="#1B2358"
            android:textSize="25sp"
            android:textStyle="bold"
            app:fontFamily="sans-serif-condensed-medium" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/header"
        >

        <Button
            android:id="@+id/fccButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@drawable/fcc"
            android:layout_marginBottom="4dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/fcc_location"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/locationDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttons"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/wwButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_weight="1"
            android:background="@drawable/waterway"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/ww_location"
            android:layout_marginBottom="4dp"
            />
    </LinearLayout>
</RelativeLayout>